syntax = "proto3";

package gosig;

option go_package = "./types";

import "gosig.proto";

service RPC {
    rpc SubmitTransaction(SubmitTransactionReq) returns (SubmitTransactionRes);
    rpc GetBalance(GetBalanceReq) returns (GetBalanceRes);
}

message SubmitTransactionReq {
    SignedTransaction tx = 1;
}

message SubmitTransactionRes {}

message GetBalanceReq {
    bytes account = 1;
}

message GetBalanceRes {
    uint64 amount = 1;
}