syntax = "proto3";

package hydfs;

option go_package = "./types";

import "gosig.proto";

service Node {
    rpc SubmitTransaction(SubmitTransactionReq) returns (SubmitTransactionRes);
    rpc TransactionStatus(TransactionStatusReq) returns (TransactionStatusRes);
}

message SubmitTransactionReq {
    SignedTransaction tx = 1;
}

message SubmitTransactionRes {
    optional string err = 1;
}

message TransactionStatusReq {
    bytes tx_hash = 1;
}

message TransactionStatusRes {
    optional string err = 1;
    string status = 2;
}